--- a/galeri.html
+++ b/galeri.html
@@ -257,6 +257,7 @@
                               </div>
                               <address class="wow fadeInUp" data-wow-delay="0.4s">
                                    <p><a href="nancycoffee.id@gmail.com">nancycoffee.id@gmail.com</a></p>
+                                   <p>TIKTOK: <a href="https://www.tiktok.com/@nancycoffee.id?_t=8hw9UghU6Z0&_r=1">@Nancycoffee.id</a> </p>
                               </address>
                          </div>
                     </div>
