--- a/reservasi.html
+++ b/reservasi.html
@@ -64,7 +64,7 @@
                 <ul class="nav navbar-nav navbar-right">
                     <li><a href="https://instagram.com/nancycoffee.id?igshid=YTQwZjQ0NmI0OA==">Instagram<i
                                 class="fa fa-instagram"></i> @nancycoffee.id</a></li>
-                    <a href="#footer" class="section-btn">Reserve a table</a>
+                    <a href="#footer" class="section-btn">Reservasi</a>
                 </ul>
             </div>
 
@@ -195,9 +195,9 @@
                             </div>   
 
                             <div class="col-md-12 col-sm-12">
-                                 <textarea class="form-control" rows="6" id="cf-message" name="message" placeholder="Tell about your object"></textarea>
+                                 <textarea class="form-control" rows="6" id="cf-message" name="message" placeholder="Pesan Tambahan"></textarea>
 
-                                 <button type="submit" class="form-control" id="cf-submit" name="submit">Send Message</button>
+                                 <button type="submit" class="form-control" id="cf-submit" name="submit">Kirim</button>
                             </div>
                        </form>
                   </div>
