--- a/menu.html
+++ b/menu.html
@@ -127,16 +127,16 @@
                     <div class="col-md-4 col-sm-6">
                          <!-- MENU THUMB -->
                          <div class="menu-thumb">
-                              <a href="images/menu/signature.jpg" class="image-popup" title="American Breakfast">
+                              <a href="images/menu/signature.jpg" class="image-popup" title="Signature">
                                    <img src="images/menu/signature.jpg" class="img-responsive" alt="">
 
                                    <div class="menu-info">
                                         <div class="menu-item">
                                              <h3>Signature</h3>
-                                             <p>Start from 15k</p>
+                                             <p>Authentic</p>
                                         </div>
                                         <div class="menu-price">
-                                             <span>15 - 30</span>
+                                             <span>26 - 28K</span>
                                         </div>
                                    </div>
                               </a>
@@ -146,16 +146,16 @@
                     <div class="col-md-4 col-sm-6">
                          <!-- MENU THUMB -->
                          <div class="menu-thumb">
-                              <a href="images/menu/coffe.jpg" class="image-popup" title="Self-made Salad">
+                              <a href="images/menu/coffe.jpg" class="image-popup" title="Coffee">
                                    <img src="images/menu/coffe.jpg" class="img-responsive" alt="">
 
                                    <div class="menu-info">
                                         <div class="menu-item">
-                                             <h3>Coffe</h3>
-                                             <p>Green / Fruits / Healthy</p>
+                                             <h3>Coffee</h3>
+                                             <p>Flavour Binder</p>
                                         </div>
                                         <div class="menu-price">
-                                             <span>$18</span>
+                                             <span>15 - 30K</span>
                                         </div>
                                    </div>
                               </a>
@@ -165,16 +165,16 @@
                     <div class="col-md-4 col-sm-6">
                          <!-- MENU THUMB -->
                          <div class="menu-thumb">
-                              <a href="images/menu/manual-brew.jpg" class="image-popup" title="Chinese Noodle">
+                              <a href="images/menu/manual-brew.jpg" class="image-popup" title="Manual Brew">
                                    <img src="images/menu/manual-brew.jpg" class="img-responsive" alt="">
 
                                    <div class="menu-info">
                                         <div class="menu-item">
                                              <h3>Manual Brew</h3>
-                                             <p>Pepper / Chicken / Vegetables</p>
+                                             <p>Without Special Machines</p>
                                         </div>
                                         <div class="menu-price">
-                                             <span>$34</span>
+                                             <span>28 - 30K</span>
                                         </div>
                                    </div>
                               </a>
@@ -184,16 +184,16 @@
                     <div class="col-md-4 col-sm-6">
                          <!-- MENU THUMB -->
                          <div class="menu-thumb">
-                              <a href="images/menu/non-coffe.jpg" class="image-popup" title="Rice Soup">
+                              <a href="images/menu/non-coffe.jpg" class="image-popup" title="Non Coffee">
                                    <img src="images/menu/non-coffe.jpg" class="img-responsive" alt="">
 
                                    <div class="menu-info">
                                         <div class="menu-item">
-                                             <h3>Rice Soup</h3>
-                                             <p>Green / Chicken</p>
+                                             <h3>Non Coffee</h3>
+                                             <p>Best Seller</p>
                                         </div>
                                         <div class="menu-price">
-                                             <span>$28</span>
+                                             <span>7 - 25K</span>
                                         </div>
                                    </div>
                               </a>
@@ -203,16 +203,16 @@
                     <div class="col-md-4 col-sm-6">
                          <!-- MENU THUMB -->
                          <div class="menu-thumb">
-                              <a href="images/menu/moctail.jpg.jpg" class="image-popup" title="Project title">
+                              <a href="images/menu/moctail.jpg.jpg" class="image-popup" title="Mocktail">
                                    <img src="images/menu/moctail.jpg" class="img-responsive" alt="">
 
                                    <div class="menu-info">
                                         <div class="menu-item">
                                              <h3>Mocktail</h3>
-                                             <p>Beef / Fried Potatoes</p>
+                                             <p>Halal Brother</p>
                                         </div>
                                         <div class="menu-price">
-                                             <span>$46</span>
+                                             <span>30K</span>
                                         </div>
                                    </div>
                               </a>
@@ -222,16 +222,15 @@
                     <div class="col-md-4 col-sm-6">
                          <!-- MENU THUMB -->
                          <div class="menu-thumb">
-                              <a href="images/menu/add-on.jpg" class="image-popup" title="Project title">
+                              <a href="images/menu/add-on.jpg" class="image-popup" title="Add on">
                                    <img src="images/menu/add-on.jpg" class="img-responsive" alt="">
 
                                    <div class="menu-info">
                                         <div class="menu-item">
-                                             <h3>Big Flat Fried</h3>
-                                             <p>Pepper / Crispy</p>
+                                             <h3>Add on</h3>
                                         </div>
                                         <div class="menu-price">
-                                             <span>$30</span>
+                                             <span>5 - 7,5K</span>
                                         </div>
                                    </div>
                               </a>
@@ -241,16 +240,16 @@
                     <div class="col-md-4 col-sm-6">
                          <!-- MENU THUMB -->
                          <div class="menu-thumb">
-                              <a href="images/menu/pastry.jpg" class="image-popup" title="Project title">
+                              <a href="images/menu/pastry.jpg" class="image-popup" title="Pastry">
                                    <img src="images/menu/pastry.jpg" class="img-responsive" alt="">
 
                                    <div class="menu-info">
                                         <div class="menu-item">
-                                             <h3>Big Flat Fried</h3>
-                                             <p>Pepper / Crispy</p>
+                                             <h3>Pastry</h3>
+                                             <p>Pastisseri</p>
                                         </div>
                                         <div class="menu-price">
-                                             <span>$30</span>
+                                             <span>18 - 23K</span>
                                         </div>
                                    </div>
                               </a>
@@ -260,16 +259,16 @@
                     <div class="col-md-4 col-sm-6">
                          <!-- MENU THUMB -->
                          <div class="menu-thumb">
-                              <a href="images/menu/main-course.jpg" class="image-popup" title="Project title">
+                              <a href="images/menu/main-course.jpg" class="image-popup" title="Main course">
                                    <img src="images/menu/main-course.jpg" class="img-responsive" alt="">
 
                                    <div class="menu-info">
                                         <div class="menu-item">
-                                             <h3>Big Flat Fried</h3>
-                                             <p>Pepper / Crispy</p>
+                                             <h3>Main course</h3>
+                                             <p>carbo, protein, vegetables</p>
                                         </div>
                                         <div class="menu-price">
-                                             <span>$30</span>
+                                             <span>27 - 35K</span>
                                         </div>
                                    </div>
                               </a>
@@ -279,16 +278,16 @@
                     <div class="col-md-4 col-sm-6">
                          <!-- MENU THUMB -->
                          <div class="menu-thumb">
-                              <a href="images/menu/snack.jpg" class="image-popup" title="Project title">
+                              <a href="images/menu/snack.jpg" class="image-popup" title="Snack">
                                    <img src="images/menu/snack.jpg" class="img-responsive" alt="">
 
                                    <div class="menu-info">
                                         <div class="menu-item">
-                                             <h3>Big Flat Fried</h3>
-                                             <p>Pepper / Crispy</p>
+                                             <h3>Snack</h3>
+                                             <p>Crispy</p>
                                         </div>
                                         <div class="menu-price">
-                                             <span>$30</span>
+                                             <span>25 - 40K</span>
                                         </div>
                                    </div>
                               </a>
@@ -297,55 +296,6 @@
                </div>
           </div>
      </section>
-
-     <!-- CONTACT -->
-     <section id="contact" data-stellar-background-ratio="0.5">
-          <div class="container">
-               <div class="row">
-                    <div class="wow fadeInUp col-md-6 col-sm-12" data-wow-delay="0.4s">
-                         <div id="google-map">
-                              <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d15867.760335250794!2d106.15510627877107!3d-6.138751984017606!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e41f50b4d158b67%3A0x6fb30a8db2eeb070!2sNancy%20Coffee%201.0!5e0!3m2!1sid!2sid!4v1701802400945!5m2!1sid!2sid" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-                         </div>
-                    </div>    
-
-                    <div class="col-md-6 col-sm-12">
-
-                         <div class="col-md-12 col-sm-12">
-                              <div class="section-title wow fadeInUp" data-wow-delay="0.1s">
-                                   <h2>Contact Us</h2>
-                              </div>
-                         </div>
-
-                         <!-- CONTACT FORM -->
-                         <form action="#" method="post" class="wow fadeInUp" id="contact-form" role="form" data-wow-delay="0.8s">
-
-                              <!-- IF MAIL SENT SUCCESSFUL  // connect this with custom JS -->
-                              <h6 class="text-success">Your message has been sent successfully.</h6>
-                              
-                              <!-- IF MAIL NOT SENT -->
-                              <h6 class="text-danger">E-mail must be valid and message must be longer than 1 character.</h6>
-
-                              <div class="col-md-6 col-sm-6">
-                                   <input type="text" class="form-control" id="cf-name" name="name" placeholder="Full name">
-                              </div>
-
-                              <div class="col-md-6 col-sm-6">
-                                   <input type="email" class="form-control" id="cf-email" name="email" placeholder="Email address">
-                              </div>
-
-                              <div class="col-md-12 col-sm-12">
-                                   <input type="text" class="form-control" id="cf-subject" name="subject" placeholder="Subject">
-
-                                   <textarea class="form-control" rows="6" id="cf-message" name="message" placeholder="Tell about your object"></textarea>
-
-                                   <button type="submit" class="form-control" id="cf-submit" name="submit">Send Message</button>
-                              </div>
-                         </form>
-                    </div>
-
-               </div>
-          </div>
-     </section>          
 
      <!-- FOOTER -->
      <footer id="footer" data-stellar-background-ratio="0.5">
