--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
                                         <div class="col-md-8 col-sm-12">
                                              <h3>Coffee Shop in Town</h3>
                                              <h1>Enjoy our special menus every Sunday day</h1>
-                                             <a href="#contact" class="section-btn btn btn-default smoothScroll">Reservation</a>
+                                             <a href="reservasi.html" class="section-btn btn btn-default smoothScroll">Reservation</a>
                                         </div>
                                    </div>
                               </div>
