--- a/galeri.html
+++ b/galeri.html
@@ -18,6 +18,7 @@
      <link rel="stylesheet" href="css/owl.carousel.css">
      <link rel="stylesheet" href="css/owl.theme.default.min.css">
      <link rel="stylesheet" href="css/magnific-popup.css">
+     <link rel='shorcut icon' href="images/logo.png" >
 
      <!-- MAIN CSS -->
      <link rel="stylesheet" href="css/templatemo-style.css">
